Uploaded Tracking APP

--- a/index_obs.html
+++ b/index_obs.html
@@ -16,12 +16,12 @@
         integrity="sha512-6K6+H87tLdCWvY5ml9ZQXLRlPlDEt8uXmtELhuJRgFyEDv6JvndWHg3jadJuBVGPEhhA2AAt+ROMC2V7EvTIWw=="
         crossorigin="anonymous"></script>
 
-    <script src="https://cdn.roboflow.com/0.2.25/roboflow.js"></script>
+    <script src="https://cdn.roboflow.com/0.2.22/roboflow.js"></script>
 
     <script src="https://unpkg.com/obs-websocket-js@5.0.2/dist/obs-ws.min.js"></script>
 
     <link rel="stylesheet" href="./main.css">
-    <script src="./ptz_roboflow.js"></script>
+    <script src="./roboflow.js"></script>
 </head>
 
 <body class="loading">
